clusters/taplab/cluster-config/app-resources/gateway-instance-configuration/petclinic-gateway/petclinic-gateway-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: petclinic-gateway
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: petclinic-gateway
      port: 80
  virtualhost:
    fqdn: petclinic.tap.kirkware.net
    tls:
      secretName: petclinic-gateway-tls-cert
